# wgpu_book-rust

./: .gitignore  Cargo.toml  clippy.cmd
examples/ch00/: ex_hlist.rs  ex_spheres.rs  spheres.wgsl  spheres_edges.wgsl  spheres_mesh.wgsl  spheres_triangles.wgsl
examples/ch01/: ex_test01.rs  ex_test02.rs  test02.rs
examples/ch02/: common.rs  common02.rs  ex_first_triangle.rs  ex_triangle_vertex_color.rs  first_triangle.rs  first_triangle.wgsl  run.rs  triangle_vertex_color.rs  triangle_vertex_color.wgsl
examples/ch03/: ex_topology.rs  topology.rs  topology.wgsl
examples/ch04/: common.rs  common04.rs  ex_hexagon.rs  ex_square.rs  ex_square_indexed.rs  ex_triangle.rs  hexagon.rs  square.rs  square_indexed.rs  triangle.rs  triangle.wgsl  vertex.rs
examples/ch05/: ex_math.rs  math.rs
examples/ch06/: camera.rs  common.rs  common06.rs  cube_camera.rs  cube_face_colors.rs  cube_face_colors.wgsl  cube_vertex_colors.rs  ex_cube_camera.rs  ex_cube_face_colors.rs  ex_cube_vertex_colors.rs  ex_line3d.rs  ex_rotate_cube.rs  line3d.rs  line3d.wgsl  rotate_cube.rs  state.rs
examples/ch07/: common.rs  common07.rs  cone.rs  cylinder.rs  ex_cone.rs  ex_cube.rs  ex_cylinder.rs  ex_sphere.rs  ex_torus.rs  sphere.rs  torus.rs
examples/ch08/: common.rs  common08.rs  cone.rs  cube.rs  cylinder.rs  ex_cone.rs  ex_cube.rs  ex_cylinder.rs  ex_sphere.rs  ex_torus.rs  shader.wgsl  torus.rs  wireframe.wgsl
examples/ch09/: breather.rs  common.rs  common09.rs  ex_breather.rs  ex_seashell.rs  ex_sievert_enneper.rs  ex_surface.rs  klein_bottle.rs  peaks.rs  seashell.rs  shader.wgsl  sievert_enneper.rs  sinc.rs  surface_data.rs  wellenkugel.rs
examples/ch10/: common.rs  common10.rs  ex_breather.rs  ex_cube.rs  ex_cube_multiple.rs  ex_cylinder.rs  ex_klein_bottle.rs  ex_peaks.rs  ex_seashell.rs  ex_sievert_enneper.rs  ex_sinc.rs  ex_sphere.rs  ex_surface.rs  ex_wellenkugel.rs  shader.wgsl  surface_data.rs
examples/ch11/: common.rs  ex_surface.rs  shader.wgsl
examples/ch12/: common.rs  ex_bindings.rs  ex_different.rs  ex_instances.rs  ex_merged.rs  ex_pipelines.rs  ex_surface.rs  ex_two_pass.rs  instances.wgsl  mesh.wgsl
examples/common/: colormap.rs  common.rs  functions.rs  global_common.rs  light-functions.wgsl  light.rs  mvp.rs  surface_data.rs  two-side-functions.wgsl  vertex.rs  vertex_data.rs  wireframe.wgsl
src/: bindings.rs  boxed.rs  buffer.rs  lib.rs  transforms.rs  uniforms.rs  webgpu.rs  window.rs  window_api.rs
