[package]
name = "webgpu_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytemuck = {version = "1.13.1", features = ["derive", "min_const_generics"]}
cgmath = "0.18.0"
image = "0.24.6"
pollster = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
raw-window-handle = "0.5.2"
wgpu = { version = "0.16.1", features = ["expose-ids"] }
winit = "0.28.6"

[[example]]
name = "ch00_sheres"
path = "examples/ch00/ex_spheres.rs"

[[example]]
name = "ch01_test01"
path = "examples/ch01/ex_test01.rs"

[[example]]
name = "ch01_test02"
path = "examples/ch01/ex_test02.rs"

[[example]]
name = "ch02_first_triangle"
path = "examples/ch02/ex_first_triangle.rs"

[[example]]
name = "ch02_triangle_vertex_color"
path = "examples/ch02/ex_triangle_vertex_color.rs"

[[example]]
name = "ch03_topology"
path = "examples/ch03/ex_topology.rs"

[[example]]
name = "ch04_triangle"
path = "examples/ch04/ex_triangle.rs"

[[example]]
name = "ch04_square"
path = "examples/ch04/ex_square.rs"

[[example]]
name = "ch04_square_indexed"
path = "examples/ch04/ex_square_indexed.rs"

[[example]]
name = "ch04_hexagon"
path = "examples/ch04/ex_hexagon.rs"

[[example]]
name = "ch05_math"
path = "examples/ch05/ex_math.rs"

[[example]]
name = "ch06_line3d"
path = "examples/ch06/ex_line3d.rs"

[[example]]
name = "ch06_cube_face_colors"
path = "examples/ch06/ex_cube_face_colors.rs"

[[example]]
name = "ch06_cube_vertex_colors"
path = "examples/ch06/ex_cube_vertex_colors.rs"

[[example]]
name = "ch06_rotate_cube"
path = "examples/ch06/ex_rotate_cube.rs"

[[example]]
name = "ch06_cube_camera"
path = "examples/ch06/ex_cube_camera.rs"

[[example]]
name = "ch07_cube"
path = "examples/ch07/ex_cube.rs"

[[example]]
name = "ch07_sphere"
path = "examples/ch07/ex_sphere.rs"

[[example]]
name = "ch07_cylinder"
path = "examples/ch07/ex_cylinder.rs"

[[example]]
name = "ch07_cone"
path = "examples/ch07/ex_cone.rs"

[[example]]
name = "ch07_torus"
path = "examples/ch07/ex_torus.rs"

[[example]]
name = "ch08_cube"
path = "examples/ch08/ex_cube.rs"

[[example]]
name = "ch08_sphere"
path = "examples/ch08/ex_sphere.rs"

[[example]]
name = "ch08_cylinder"
path = "examples/ch08/ex_cylinder.rs"

[[example]]
name = "ch08_cone"
path = "examples/ch08/ex_cone.rs"

[[example]]
name = "ch08_torus"
path = "examples/ch08/ex_torus.rs"

[[example]]
name = "ch09_surface"
path = "examples/ch09/ex_surface.rs"

[[example]]
name = "ch10_cube"
path = "examples/ch10/ex_cube.rs"

[[example]]
name = "ch10_sphere"
path = "examples/ch10/ex_sphere.rs"

[[example]]
name = "ch10_cylinder"
path = "examples/ch10/ex_cylinder.rs"

[[example]]
name = "ch10_surface"
path = "examples/ch10/ex_surface.rs"

[[example]]
name = "ch10_cube_multiple"
path = "examples/ch10/ex_cube_multiple.rs"

[[example]]
name = "ch11_surface"
path = "examples/ch11/ex_surface.rs"

[[example]]
name = "ch12_bindings"
path = "examples/ch12/ex_bindings.rs"

[[example]]
name = "ch12_instances"
path = "examples/ch12/ex_instances.rs"

[[example]]
name = "ch12_merged"
path = "examples/ch12/ex_merged.rs"

[[example]]
name = "ch12_pipelines"
path = "examples/ch12/ex_pipelines.rs"

[[example]]
name = "ch12_surface"
path = "examples/ch12/ex_surface.rs"

[[example]]
name = "ch12_two_pass"
path = "examples/ch12/ex_two_pass.rs"
